--- a/input.css
+++ b/input.css
@@ -3,3 +3,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.display-none {
+  @apply hidden;
+}
+
+img.custom-fill {
+  @apply fill-white;
+}
