--- a/output.css
+++ b/output.css
@@ -518,6 +518,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -538,8 +542,20 @@ video {
   bottom: 9rem;
 }
 
+.bottom-4{
+  bottom: 1rem;
+}
+
+.right-4{
+  right: 1rem;
+}
+
 .top-16{
   top: 4rem;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .mx-6{
@@ -616,6 +632,18 @@ video {
   height: 60px;
 }
 
+.h-4{
+  height: 1rem;
+}
+
+.h-10{
+  height: 2.5rem;
+}
+
+.h-full{
+  height: 100%;
+}
+
 .w-\[213px\]{
   width: 213px;
 }
@@ -630,6 +658,34 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-10{
+  width: 2.5rem;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
+.w-8{
+  width: 2rem;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-7{
+  width: 1.75rem;
+}
+
+.w-9{
+  width: 2.25rem;
 }
 
 .transform{
@@ -686,9 +742,18 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
 .bg-blueOcean{
   --tw-bg-opacity: 1;
   background-color: rgb(31 124 255 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .bg-whiteBlue{
@@ -704,6 +769,26 @@ video {
   fill: #e9ecef;
 }
 
+.p-6{
+  padding: 1.5rem;
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-8{
+  padding: 2rem;
+}
+
+.p-5{
+  padding: 1.25rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
 .px-11{
   padding-left: 2.75rem;
   padding-right: 2.75rem;
@@ -714,9 +799,19 @@ video {
   padding-right: 3rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-3{
@@ -729,8 +824,24 @@ video {
   padding-bottom: 1rem;
 }
 
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pt-1{
+  padding-top: 0.25rem;
+}
+
 .text-center{
   text-align: center;
+}
+
+.align-middle{
+  vertical-align: middle;
 }
 
 .font-Poppins{
@@ -753,6 +864,16 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .font-bold{
@@ -805,6 +926,20 @@ img.custom-fill{
   fill: #e9ecef;
 }
 
+.hover\:bg-gray-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blueOcean:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 124 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blueOcean\/80:hover{
+  background-color: rgb(31 124 255 / 0.8);
+}
+
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -819,14 +954,14 @@ img.custom-fill{
   fill: #e9ecef;
 }
 
-:is(.dark .dark\:text-white){
-  --tw-text-opacity: 1;
-  color: rgb(233 236 239 / var(--tw-text-opacity));
-}
-
 :is(.dark .dark\:text-grey2){
   --tw-text-opacity: 1;
   color: rgb(108 117 125 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-white){
+  --tw-text-opacity: 1;
+  color: rgb(233 236 239 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px){
