--- a/output.css
+++ b/output.css
@@ -554,6 +554,14 @@ video {
   top: 4rem;
 }
 
+.bottom-6{
+  bottom: 1.5rem;
+}
+
+.right-6{
+  right: 1.5rem;
+}
+
 .z-50{
   z-index: 50;
 }
@@ -608,6 +616,10 @@ video {
   margin-top: 6px;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -632,6 +644,18 @@ video {
   height: 60px;
 }
 
+.h-20{
+  height: 5rem;
+}
+
+.h-10{
+  height: 2.5rem;
+}
+
+.h-16{
+  height: 4rem;
+}
+
 .w-9{
   width: 2.25rem;
 }
@@ -650,6 +674,30 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-auto{
+  width: auto;
+}
+
+.w-10{
+  width: 2.5rem;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-14{
+  width: 3.5rem;
+}
+
+.w-16{
+  width: 4rem;
 }
 
 .transform{
@@ -716,6 +764,16 @@ video {
   background-color: rgb(245 246 251 / var(--tw-bg-opacity));
 }
 
+.bg-yellow-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+
 .fill-black{
   fill: #000;
 }
@@ -726,6 +784,22 @@ video {
 
 .p-5{
   padding: 1.25rem;
+}
+
+.p-0{
+  padding: 0px;
+}
+
+.p-20{
+  padding: 5rem;
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-14{
+  padding: 3.5rem;
 }
 
 .px-11{
@@ -757,6 +831,10 @@ video {
   padding-top: 0.25rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -781,6 +859,11 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .font-bold{
@@ -835,6 +918,32 @@ img.custom-fill{
 
 .hover\:bg-blueOcean\/80:hover{
   background-color: rgb(31 124 255 / 0.8);
+}
+
+.hover\:bg-whiteBlue\/10:hover{
+  background-color: rgb(245 246 251 / 0.1);
+}
+
+.hover\:bg-whiteBlue\/90:hover{
+  background-color: rgb(245 246 251 / 0.9);
+}
+
+.hover\:bg-black:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 236 239 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blueOcean\/50:hover{
+  background-color: rgb(31 124 255 / 0.5);
+}
+
+.hover\:bg-blueOcean\/90:hover{
+  background-color: rgb(31 124 255 / 0.9);
 }
 
 .focus\:outline-none:focus{
